Fix spacing issue

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -14,7 +14,6 @@
 
 	img {
 		position: relative;
-		margin: 0px $space5 0px;
 		display: block;
 		width: $space9;
 		height: $space9;
